--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 05:04:00 PM</p>
+    <p class="lastupdate">09/18/2020 05:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.841 inHg (-0.034)</td>
+        <td class="data">29.840 inHg (-0.031)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">11 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">82.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          339
+          338
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          213
+          212
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:42:01 PM">
-            82.1</span><br/>
+          <span title="05:08:01 PM">
+            82.2</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:42:01 PM (Friday)">
-            82.1</span><br/>
+          <span title="05:08:01 PM (Friday)">
+            82.2</span><br/>
           <span title="05:43:00 AM (Thursday)">
             70.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 2 hours, 17 minutes</td>
+      <td class="data">17 days, 2 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 2 hours, 17 minutes</td>
+      <td class="data">17 days, 2 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
