--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 05:19:00 PM</p>
+    <p class="lastupdate">09/18/2020 05:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.029)</td>
+        <td class="data">29.840 inHg (-0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">11 mph S (180&#176;)</td>
+        <td class="data">10 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.2&#176;F</td>
+        <td class="data">82.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">38%</td>
       </tr>
     </tbody>
   </table>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          335
+          333
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="07:46:01 AM">
             50</span><br/>
-          <span title="04:24:01 PM">
-            39</span>
+          <span title="05:22:02 PM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:46:01 AM (Friday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 2 hours, 32 minutes</td>
+      <td class="data">17 days, 2 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 2 hours, 32 minutes</td>
+      <td class="data">17 days, 2 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
