--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 05:49:00 PM</p>
+    <p class="lastupdate">09/18/2020 05:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">81.0&#176;F</td>
+        <td class="data">80.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">81.0&#176;F</td>
+        <td class="data">80.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">81.0&#176;F</td>
+        <td class="data">80.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">50.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.844 inHg (-0.017)</td>
+        <td class="data">29.841 inHg (-0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">12 mph S (180&#176;)</td>
+        <td class="data">13 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">82.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          323
+          318
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:43:02 PM">
-            82.7</span><br/>
+          <span title="05:50:02 PM">
+            82.8</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:43:02 PM (Friday)">
-            82.7</span><br/>
+          <span title="05:50:02 PM (Friday)">
+            82.8</span><br/>
           <span title="05:43:00 AM (Thursday)">
             70.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 3 hours, 2 minutes</td>
+      <td class="data">17 days, 3 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 3 hours, 2 minutes</td>
+      <td class="data">17 days, 3 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
