--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:09:00 PM</p>
+    <p class="lastupdate">09/18/2020 06:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.846 inHg (-0.006)</td>
+        <td class="data">29.853 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">6 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.7&#176;F</td>
+        <td class="data">84.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          307
+          304
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:07:02 PM">
-            83.7</span><br/>
+          <span title="06:13:02 PM">
+            84.1</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:07:02 PM (Friday)">
-            83.7</span><br/>
+          <span title="06:13:02 PM (Friday)">
+            84.1</span><br/>
           <span title="05:43:00 AM (Thursday)">
             70.6</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="07:46:01 AM">
             50</span><br/>
-          <span title="05:22:02 PM">
-            38</span>
+          <span title="06:12:02 PM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:46:01 AM (Friday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 3 hours, 22 minutes</td>
+      <td class="data">17 days, 3 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 3 hours, 22 minutes</td>
+      <td class="data">17 days, 3 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
