--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:14:00 PM</p>
+    <p class="lastupdate">09/18/2020 06:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">79.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">79.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">79.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.3&#176;F</td>
+        <td class="data">51.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">37%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.853 inHg (0.000)</td>
+        <td class="data">29.858 inHg (0.007)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph SSW (202&#176;)</td>
+        <td class="data">2 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">84.1&#176;F</td>
+        <td class="data">84.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          304
+          303
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:13:02 PM">
-            84.1</span><br/>
+          <span title="06:18:02 PM">
+            84.4</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:13:02 PM (Friday)">
-            84.1</span><br/>
+          <span title="06:18:02 PM (Friday)">
+            84.4</span><br/>
           <span title="05:43:00 AM (Thursday)">
             70.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 3 hours, 27 minutes</td>
+      <td class="data">17 days, 3 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 3 hours, 27 minutes</td>
+      <td class="data">17 days, 3 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
