--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 06:34:00 PM</p>
+    <p class="lastupdate">09/18/2020 06:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.4&#176;F</td>
+        <td class="data">78.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.4&#176;F</td>
+        <td class="data">78.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.4&#176;F</td>
+        <td class="data">78.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.866 inHg (0.018)</td>
+        <td class="data">29.861 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph SSW (202&#176;)</td>
+        <td class="data">2 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">85.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
-          299
+          0<br/>
+          298
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:31:02 PM">
-            85.0</span><br/>
+          <span title="06:35:02 PM">
+            85.1</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:31:02 PM (Friday)">
-            85.0</span><br/>
+          <span title="06:35:02 PM (Friday)">
+            85.1</span><br/>
           <span title="05:43:00 AM (Thursday)">
             70.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 3 hours, 47 minutes</td>
+      <td class="data">17 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 3 hours, 47 minutes</td>
+      <td class="data">17 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
