--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 08:09:00 PM</p>
+    <p class="lastupdate">09/18/2020 08:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.6&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.6&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.6&#176;F</td>
+        <td class="data">69.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.7&#176;F</td>
+        <td class="data">51.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">53%</td>
+        <td class="data">54%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.898 inHg (0.058)</td>
+        <td class="data">29.900 inHg (0.060)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.7&#176;F</td>
+        <td class="data">80.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 5 hours, 22 minutes</td>
+      <td class="data">17 days, 5 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 5 hours, 22 minutes</td>
+      <td class="data">17 days, 5 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
