--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 09:14:00 PM</p>
+    <p class="lastupdate">09/18/2020 09:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.1&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.1&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.1&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">65%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.917 inHg (0.064)</td>
+        <td class="data">29.919 inHg (0.061)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNW (338&#176;)</td>
+        <td class="data">8 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.8&#176;F</td>
+        <td class="data">79.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          322
+          323
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          201
+          202
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">17 days, 6 hours, 27 minutes</td>
+      <td class="data">17 days, 6 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">17 days, 6 hours, 27 minutes</td>
+      <td class="data">17 days, 6 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
